# webassembly-runtime

./: .gitignore  CMakeLists.txt  README.md
build-scripts/: build_llvm.py  runtime_lib.cmake
iwasm/interpreter/platform/: platform_api.h
iwasm/interpreter/platform/linux/: linux_malloc.c  platform_init.c  platform_internal.h
iwasm/interpreter/utils/: read_var.c  read_var.h
product/linux/: config.cmake  main.c
runtime/platform/common/: platform.h  platform_api.h
runtime/platform/common/posix/: platform_posix.cmake  posix_malloc.c  posix_memmap.c  posix_socket.c  posix_thread.c  posix_time.c
runtime/platform/include/: config.h  platform.h  platform_api.h  platform_api_extension.h  platform_common.h
runtime/platform/linux/: linux_read_file.c  linux_time.c  platform.cmake  platform_init.c  platform_internal.h
runtime/utils/: utils.cmake
runtime/utils/include/: adjust.h  bh_common.h  bh_list.h  check.h  log.h  read_var.h  runtime_adjust.h  runtime_check.h  runtime_log.h  runtime_read_var.h  runtime_utils.h  utils.h
runtime/utils/src/: adjust.c  bh_common.c  check.c  log.c  read_var.c  runtime_adjust.c  runtime_check.c  runtime_log.c  runtime_read_var.c
runtime/wasmvm/: wasmvm.cmake
runtime/wasmvm/application/include/: wasm_runtime_api.h
runtime/wasmvm/common/include/: wasm_memory.h  wasm_native.h  wasm_opcode.h  wasm_type.h
runtime/wasmvm/common/src/: wasm_memory.c  wasm_native.c
runtime/wasmvm/exception/include/: wasm_exception.h
runtime/wasmvm/exception/src/: wasm_exception_common.c  wasm_memory_exception.c
runtime/wasmvm/executor/include/: wasm_exec_env.h  wasm_executor.h  wasm_runtime_executor_api.h
runtime/wasmvm/executor/src/: wasm_exec_env.c  wasm_executor.c
runtime/wasmvm/init/include/: wasm_runtime_init_api.h
runtime/wasmvm/init/src/: wasm_runtime_init.c
runtime/wasmvm/instantiate/include/: instantiate.h  instantiate_common.h  wasm_runtime_instantiate_api.h
runtime/wasmvm/instantiate/src/: export_instantiate.c  function_instantiate.c  globals_instantiate.c  instantiate.c  memories_instantiate.c  tables_instantiate.c  wasm_export_instantiate.c  wasm_globals_instantiate.c  wasm_instantiate.c  wasm_memories_instantiate.c  wasm_tables_instantiate.c
runtime/wasmvm/interpreter/: interp.cmake
runtime/wasmvm/interpreter/include/: wasm_fast_readleb.h  wasm_interp.h
runtime/wasmvm/interpreter/src/: wasm_fast_readleb.c  wasm_interp_classic.c  wasm_interpreter.c
runtime/wasmvm/jit/include/: wasm_jit.h  wasm_jit_compiler.h  wasm_jit_emit_compare.h  wasm_jit_emit_control.h  wasm_jit_emit_conversion.h  wasm_jit_emit_exception.h  wasm_jit_emit_function.h  wasm_jit_emit_memory.h  wasm_jit_emit_numberic.h  wasm_jit_emit_table.h  wasm_jit_init.h  wasm_jit_intrinsic.h  wasm_jit_llvm.h  wasm_jit_orc_extra.h  wasm_llvm_opcode.h
runtime/wasmvm/jit/src/: aot.c  aot_emit_compare.c  aot_emit_control.c  aot_emit_conversion.c  aot_emit_exception.c  aot_emit_function.c  aot_emit_memory.c  aot_emit_numberic.c  aot_emit_table.c  aot_intrinsic.c  aot_llvm.c  aot_llvm_extra.cpp  aot_orc_extra.cpp  wasm_jit_compiler.c  wasm_jit_emit_compare.c  wasm_jit_emit_control.c  wasm_jit_emit_conversion.c  wasm_jit_emit_exception.c  wasm_jit_emit_function.c  wasm_jit_emit_memory.c  wasm_jit_emit_numberic.c  wasm_jit_init.c  wasm_jit_llvm.c  wasm_jit_llvm_extra.cpp  wasm_jit_orc_extra.cpp
runtime/wasmvm/libc-wasi/: libc_wasi.cmake
runtime/wasmvm/loader/include/: wasm_loader.h  wasm_loader_common.h  wasm_runtime_loader_api.h
runtime/wasmvm/loader/src/: wasm_code_loader.c  wasm_data_loader.c  wasm_element_loader.c  wasm_export_loader.c  wasm_function_loader.c  wasm_global_loader.c  wasm_import_loader.c  wasm_init_loader.c  wasm_loader.c  wasm_loader_common.c  wasm_memory_loader.c  wasm_start_loader.c  wasm_table_loader.c  wasm_type_loader.c
runtime/wasmvm/native/: wasm_native.c  wasm_native.h
runtime/wasmvm/native/include/: wasm_native.h
runtime/wasmvm/native/src/: wasm_native.c
runtime/wasmvm/validator/include/: wasm_block_validator.h  wasm_leb_validator.h  wasm_runtime_validator_api.h  wasm_stack_validator.h  wasm_validator.h
runtime/wasmvm/wasi/: wasi.cmake
tests/: memory.wast  runtest.py
(+34 files in other folders)
